# TruAgent

./: .env.example  .gitignore  .replit  CLAUDE.md  DECISIONS.md  INTEGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md  ROADMAP.md  ZAPIER_QUICKSTART.md  ZAPIER_SETUP.md  aerial_building_footprint_roof_area_estimator_build_spec.md  main.py  pyproject.toml  replit.md  requirements.txt
.claude/: settings.json
docs/: ALPHA_CONNECTION_HANDOFF.md  APP_INTEGRATION_ROADMAP.md  BUILD_PROGRESS.md  CONNECT_INTEGRATIONS.md  CONNECT_QUICKBOOKS.docx  CONNECT_QUICKBOOKS.md  CRM-BUILD-LOG.md  CRM-ROADMAP.md  FEATURE_CATALOG.md  MVP_GAP_ASSESSMENT.md  NEXT_INSTANCE_BUILD_PLAN.md  architecture.md  data_model.md  env_template.md  handoff.md
static/: app.js  dashboard.html  index.html  manifest.json  portal.html  service-worker.js  style.css  thanks.html
tests/: test_dashboard_summary.py  test_scheduler.py  test_security_doors.py
